2006-12-18 Sandro Santilli <strk@refractions.net>

	* source/precision/GeometrySnapper.cpp,
	  source/headers/geos/geom/BinaryOp.h,
	  source/headers/geos/precision/GeometrySnapper.h:
	  Geometry snapping synced with JTS.

2006-12-18 Sandro Santilli <strk@refractions.net>

	* HOWTO_RELEASE: add ChangeLog's release mark step.
	* source/precision/GeometrySnapper.cpp (computeSnapTolerance):
	  properly compute snap tolerance for fixed precision geometries.
	* tests/xmltester/: Makefile.am, TestRobustOverlayFixed.xml:
	  new test for fixed precision snapping.

---------  GEOS-3.0.0rc3 release [2006-12-14] --------------------------

2006-12-13 Mateusz Loskot <mateusz@loskot.net>

	* build\msvc80\geos_lib\geos_lib.vcproj,source\Makefile.vc:
	  Updated makefile and project file for Visual C++.

2006-12-13 Sandro Santilli <strk@refractions.net>

	* precision::GeometrySnapper, precision::LineStringSnapper,
	  operation::overlay::FuzzyPointLocator,
	  operation::overlay::OffsetPointGenerator,
	  operation::overlay::OverlayValidator:
	  Updated port information.

2006-12-11 Sandro Santilli <strk@refractions.net>

	* source/headers/geos/noding/SegmentIntersector.h: added virtual
	  isDone() function, always returning false by default.
	* source/noding/MCIndexNoder.cpp (intersectChains):
	  short-circuit from JTS-1.8, based on the new
	  SegmentIntersector::isDone() method.
	* source/noding/Makefile.am, source/noding/FastNodingValidator.cpp,
	  source/noding/SingleInteriorIntersectionFinder.cpp,
	  source/headers/geos/noding/Makefile.am,
	  source/headers/geos/noding/FastNodingValidator.h,
	  source/headers/geos/noding/SingleInteriorIntersectionFinder.h:
	  New ports from JTS-1.8-cvs.
	* source/headers/geos/geomgraph/EdgeNodingValidator.h:
	  use a FastNodingValidator rather then a simple NodingValidator.

2006-12-07 Sandro Santilli <strk@refractions.net>

	* source/headers/geos/algorithm/: CentralEndpointIntersector.h,
	  Makefile.am: new port from JTS-1.8.