@@ -215,5 +215,36 @@ true
 
 </case>
 
+ <case>
+<desc>
+postgis-users/2006-November/014013.html
+</desc>
+<a>
+MULTIPOLYGON(((-112.237615 33.491154,-112.237614 33.490469,-112.237752
+33.490529,-112.23774 33.494274,-112.235109 33.494339,-112.235109
+33.494222,-112.233468 33.494258,-112.233631 33.491873,-112.236704
+33.491169,-112.237615 33.491154)),((-112.237137 33.506662,-112.237111
+33.505964,-112.236836 33.505292,-112.235281 33.503124,-112.23644
+33.502654,-112.237714 33.502702,-112.237695 33.50665,-112.237137
+33.506662)),((-112.236804 33.501624,-112.236731 33.501185,-112.234285
+33.501218,-112.234295 33.499851,-112.237725 33.499804,-112.237714
+33.501536,-112.236804 33.501624)))
+</a>
+
+<b>
+POLYGON((-112.235266 33.502267,-112.234309 33.502505,-112.234451
+33.501985,-112.234479 33.501868,-112.234509 33.501141,-112.236709
+33.501141,-112.236909 33.501541,-112.235687 33.502032,-112.235266
+33.502267))
+</b>
+
+<test>
+<op name="areatest">
+0.001
+</op>
+</test>
+
+</case>
+
 
 </run>
